Revision history for Perl extension AnyEvent.

4.92
        - lowering the timeout at runtime did not have immediate effect
          in AnyEvent::Handle.
        - AE::Handle now has separate and independent read and write timeout
          settings.
	- hackishly provide fast AE:: interface when EV is the backend.

4.91 Thu Aug  6 15:42:45 CEST 2009
	- AE::Handle::starttls could get out of sync when the read buffer
          already contains some TLS handshake.
	- AE::Handle did not properly free the TLS session, causing bigger
          memory leaks in Net::SSLeay than expected (reported by toaster).
        - AE::Socket::tcp_connect will now artificially delay invoking
          the callback to avoid returning after invoking the callback.
        - convert many internal watcher uses to AE API.

4.9  Sat Aug  1 11:07:01 CEST 2009
	- Glib silently fails when registering a timeout with
          a negative value, so avoid that.
        - call condvar callback immediately  when it is set
          after the condition is already signalled.
        - check rbuf_max condition only after trying to consume
          data.
	- normalise signal numbers to names when using the ae's
          signal handling, but do not document this (yet).
        - pure perl signal emulation did not properly set nonblocking
          mode on the signal pipe on win32 (this is unlikely to have caused
          any issues).
        - new module: AnyEvent::Debug.
        - AnyEvent::Strict now checks that a signal was specified
          by name (not name or number).
        - reduce memory footprint in typical cases by ~50kb by
          only compiling signal code when necessary.
        - add AnyEvent::Handle->rbuf_max.
        - grab the AE namespace for future new API, implement stubs for
          said future/alternative API.
        - new function: AnyEvent::Socket::format_hostport.

4.881 Tue Jul 28 12:51:53 CEST 2009
	- work around a bug in local in pre-5.10 perls, causing